# mbwind

./: README.md  pyproject.toml
src/mbwind/: cli.py  display.py  score.py
src/mbwind/sources/: noaa.py  open_meteo.py  thermal.py
tests/: test_score.py
