[project]
name = "mbwind"
version = "0.1.0"
description = "Mission Bay wind confidence tool for laser sailing"
readme = "README.md"
authors = [
    { name = "Daniel Diaz", email = "daniel.delvin.diaz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "click",
    "rich",
]

[project.scripts]
mbwind = "mbwind.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest"]
